135 ==> 374071 - Tags checkbox tristate incorrect when deselecting tagged images (off-by-one).
136 ==> 313507 - digiKam does not start reliable anymore.
137 ==> 353534 - Error at startup: error loading kio_digikamalbums followed by crash.
138 ==> 097078 - digiKam comments KIO slave for inserting comments into other files.
139 ==> 096878 - Ability to use kioslaves for camera image source.
140 ==> 119424 - digiKam unable to create io-slave.
141 ==> 145228 - Public Album kioslaves.
142 ==> 354867 - digiKam crashes while renaming files.
143 ==> 150076 - Playing music during a slideshow.
144 ==> 374135 - Storage capacity shows lower unit than actual capacity.
145 ==> 203714 - Play animated GIF files in preview mode.
146 ==> 374178 - Wanting .vob files and .mov files to appear.
147 ==> 374179 - Want .mts movies to appear in the digikam album.
148 ==> 370392 - digiKam does not start on wayland.
149 ==> 372420 - digiKam crashed under wayland.
150 ==> 366234 - Import from card readers starts automatically when digikam is started.
151 ==> 374185 - Tagging problem when two names like 'Name%'.
152 ==> 372481 - Face tag assignment with copy/paste.
153 ==> 284780 - Face assignement need to use both mouse and keyboard to name persons.
154 ==> 368124 - Face tag inside album view is case sensitive.
155 ==> 360155 - Tag list is not filtered during face tag naming.
156 ==> 374354 - Installer adds "Uninstall" item to Start menu.
157 ==> 360955 - digiKam - EXIF caption no longer copied to captions area.
158 ==> 371530 - Database query fails when adding face rectangle resulting in full freeze.
159 ==> 365313 - SETUP : Selecting location for pictures during initial setup results in wrong collection path.
160 ==> 366247 - digiKam writes metadata to some files only not every one.
161 ==> 374326 - Tag view does not always show children.
162 ==> 374327 - Tags view: shows images that do not have the currently selected tag.
163 ==> 374413 - Picture sorting by name incorrect.
164 ==> 