@@ -45,6 +45,7 @@ set(libqueuemanager_SRCS
     tools/metadata/timeadjustcontainer.cpp
     tools/metadata/timeadjustsettings.cpp
     tools/metadata/clockphotodialog.cpp
+    tools/metadata/detbyclockphotobutton.cpp
     tools/transform/flip.cpp
     tools/transform/resize.cpp
     tools/transform/rotate.cpp
