@@ -208,4 +208,5 @@ BUGFIXES FROM BUGZILLA:
 161 ==> 374326 - Tag view does not always show children.
 162 ==> 374327 - Tags view: shows images that do not have the currently selected tag.
 163 ==> 374413 - Picture sorting by name incorrect.
-164 ==> 
+164 ==> 296580 - Allow D&D for clock photo in batch queue manager
+165 ==>
